fixed default img and extra space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,7 @@ body {
 .chosen-thumbnail>img {
 	border-radius: 100px 100px 100px 100px;
 	box-shadow: 0px 0px 10px 5px #e5a84f;
+	height:200px
 }
 .chosen-info a {
 	color: #444444;
@@ -75,7 +76,7 @@ body {
 }
 .chosen-map iframe{
 	border-radius: 20px 20px 20px 20px;
-	
+
 }
 
 /*End` restaurant info stlying*/
